data/derived/comb/progs/unify/prog0964.ml.out
Characters 156-168:
  | _ -> ( ((z)/10), ((z) mod 10))
                     ^^^^^^^^^^^^
Error: This expression has type int but an expression was expected of type
         int list
